# gudi-lbl-tdr25a

./: .gitmodules  README.md  config_DUNE.yaml  config_grid_profiling.sh  config_grid_profiling_root.sh  nnhome_slurm.sh  submit_DUNE.sh  update-externals.sh
gundamOscAnaTools/: .gitignore  README.md
gundamOscAnaTools/resources/TabulateNuOscillator/: CMakeLists.txt  README.md  TabulatedNuOscillator.cc  TabulatedNuOscillator.hh  compile.sh  dumpAtmOscProb.cc  exampleEnergyBinning.py  exampleHeightBinning.py  exampleZenithBinning.py  testTabulatedNuOscillator.cc
gundamOscAnaTools/resources/TabulateNuOscillator/Configs/: GUNDAM_CUDAProb3_fixed  GUNDAM_CUDAProb3_height  GUNDAM_OscProb  README.md
gundamOscAnaTools/resources/TabulateProb3PlusPlus/: CMakeLists.txt  README.md  TabulatedProb3PlusPlus.cc  testTabulatedProb3PlusPlus.cc
injector/: parameterInjector1.yaml
inputs/datasets/: configDatasets.yaml
inputs/fitter/: configMCMC.yaml  configMinimizer.yaml
inputs/output/: configEventTreeWriter.yaml  configPlotGenerator.yaml  configScan.yaml
inputs/output/dictionaries/: ReactionCodesDict.yaml
inputs/parameters/: configParSet.yaml  osc_cov.root
inputs/parameters/detector/: FDdetector_EScale_dials.root  FDdetector_covariance_DUNE_systs.root  FDdetsys_covmat.yaml  binning_FDdetsys_Erecnue.txt  binning_FDdetsys_Erecnumu.txt
inputs/parameters/flux/: fluxBinning_DUNE.txt  flux_covariance_DUNE_systs_2022a_FD_v3.root  flux_covariance_DUNE_systs_2023.root  regularize_flux_covariance_DUNE_systs_2023.root
inputs/parameters/oscProb/: grid_E1000.root  grid_E10000.root  grid_E2000.root
inputs/parameters/xsec/: regularize_xsec_covariance_DUNE_systs_2023.root  regularize_xsec_covariance_only_DUNE_systs_2023.root  xsec_covariance_only_DUNE_systs_2022a_FD_v3.root  xsec_covariance_only_DUNE_systs_2023.root
inputs/propagator/: configPropagator.yaml
inputs/samples/: configSamples.yaml
inputs/samples/binning_DUNE/: dune_binning_nue.txt  dune_binning_numu.txt  dune_binning_recoE_nue.txt  dune_binning_recoE_numu.txt
macros/: README.md
macros/fileConvertor/: README.md  nnhome_slurm_MaCh3Input.sh  prepareGundamMCTree_MaCh3Input.cpp  run_jobs_slurm_nnhome.sh  splitVectors.cpp
macros/misc/: Converter.cpp  Makefile  decompose_with_regularization.cpp  drawSplines.cxx  eventspectra.cpp  getIntegrals.cpp  makeEnergyGrid.py  makeOscCov.cpp
macros/profiling/: README.md  make_osc_yaml_grid_profilling.cpp  profiling_scan_plot.C
overrides/: CV2uBY_limitExtend.yaml  configMcmc.yaml  noFDDetSyst.yaml  noOscillations.yaml  nullOscillationParameters.yaml  onlyNonswap.yaml
